--- a/MegaMerge/Layouts/MainGame.uistate.xml
+++ b/MegaMerge/Layouts/MainGame.uistate.xml
@@ -20,13 +20,12 @@ you probably do not want to add any .uistate.xml files to the repository.-->
     <properties>
         <property expanded="0" name="Layout properties" />
         <property expanded="0" name="Layout Size" />
-        <property expanded="0" name="Margins" />
+        <property expanded="1" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Background" />
+    <active-layer name="Game" />
     <layers>
         <layer locked="0" name="Background" parallax-in-editor="0" visible="1" />
-        <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="UI" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 0" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Game" parallax-in-editor="0" visible="1" />
