--- a/TheLastActivist/Layouts/MainGame.uistate.xml
+++ b/TheLastActivist/Layouts/MainGame.uistate.xml
@@ -23,8 +23,11 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Ground" />
+    <active-layer name="Basura" />
     <layers>
         <layer locked="0" name="Ground" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Obstaculos" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Basura" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="PC y NPC" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
