--- a/TheLastActivist/Layouts/MainGame.xml
+++ b/TheLastActivist/Layouts/MainGame.xml
@@ -325,14 +325,36 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>476</x>
-                        <y>410</y>
+                        <x>484</x>
+                        <y>341</y>
                         <z>0</z>
                         <width>82</width>
                         <height>55</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5090909</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="Sprite2" uid="19">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>479</x>
+                        <y>1131</y>
+                        <z>0</z>
+                        <width>958</width>
+                        <height>1350</height>
+                        <depth>0</depth>
+                        <hotspotX>0.500404835</hotspotX>
+                        <hotspotY>0.500383139</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
