--- a/TheLastActivist/Layouts/Start_Screen.uistate.xml
+++ b/TheLastActivist/Layouts/Start_Screen.uistate.xml
@@ -23,10 +23,11 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Logo" />
+    <active-layer name="Text_Play" />
     <layers>
         <layer locked="1" name="Background" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Player" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Logo" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Text_Play" parallax-in-editor="0" visible="0" />
     </layers>
 </c2uistate>
