--- a/TheLastActivist/Layouts/Start_Screen.xml
+++ b/TheLastActivist/Layouts/Start_Screen.xml
@@ -92,7 +92,7 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="Player" uid="19">
+                <instance type="PlayerIntro" uid="19">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
